[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Mucho_Power.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/SceneScript.gd" type="Script" id=2]
[ext_resource path="res://Images/concept2_1.png" type="Texture" id=3]
[ext_resource path="res://Audio/Men√∫.wav" type="AudioStream" id=4]
[ext_resource path="res://Images/blanco.png" type="Texture" id=5]
[ext_resource path="res://Images/logo.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
outline_color = Color( 0.0784314, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 241.414, 300 )
scale = Vector2( 0.335, 0.335 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Sprite"]
position = Vector2( 1501.72, 0.0560532 )
scale = Vector2( 1.81057, 2.75393 )
texture = ExtResource( 5 )

[node name="btnComenzar" type="Button" parent="."]
margin_left = 670.0
margin_top = 325.0
margin_right = 850.0
margin_bottom = 385.0
custom_fonts/font = SubResource( 1 )
text = "Comenzar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 527.649
margin_top = 63.1005
margin_right = 946.649
margin_bottom = 153.101
custom_fonts/font = SubResource( 2 )
text = "Machi"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCreditos" type="Button" parent="."]
margin_left = 670.0
margin_top = 450.0
margin_right = 850.0
margin_bottom = 510.0
custom_fonts/font = SubResource( 3 )
text = "Creditos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 752.428, 136.517 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
[connection signal="pressed" from="btnComenzar" to="." method="_on_btnComenzar_pressed"]
[connection signal="pressed" from="btnCreditos" to="." method="_on_btnCreditos_pressed"]
