[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Mucho_Power.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/SceneScript.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 60.0
margin_top = 140.0
margin_right = 188.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
text = "Andrea Zamudio palafox"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 60.0
margin_top = 200.0
margin_right = 188.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 1 )
text = "Manuel Alejandro alegria ortega"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 60.0
margin_top = 260.0
margin_right = 391.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 1 )
text = "Rodrigo Lenero mendez"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 60.0
margin_top = 320.0
margin_right = 188.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 1 )
text = "Nombre 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 60.0
margin_top = 380.0
margin_right = 190.0
margin_bottom = 397.0
custom_fonts/font = SubResource( 1 )
text = "Eliuth Montiel Navarrete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnRegresar" type="Button" parent="."]
margin_left = 760.0
margin_top = 500.0
margin_right = 940.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 2 )
text = "Regresar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnRegresar" to="." method="_on_btnRegresar_pressed"]
